fix(footer): Fix missing margin

--- a/src/components/pages/dashboard/DashboardPage.module.scss
+++ b/src/components/pages/dashboard/DashboardPage.module.scss
@@ -17,6 +17,7 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
+    margin-bottom: 20px;
 
     &__header {
       margin-bottom: 20px;
